tests/test_exception/bad/output/one_ambiguous_exception.catala_en.A.Interpret
[ERROR] This exception can refer to several definitions. Try using labels to disambiguate

Ambiguous exception
  --> tests/test_exception/bad/one_ambiguous_exception.catala_en
   | 
16 |   definition y equals 4
   |                       
17 | 
   | 
18 |   exception
   |   ^^^^^^^^^
19 |   definition y equals 3
   |   ^^^^^^^^^^^^^^^^^^^^^^
   + Test

Candidate definition
  --> tests/test_exception/bad/one_ambiguous_exception.catala_en
   | 
16 |   definition y equals 4
   |              ^
   + Test

Candidate definition
  --> tests/test_exception/bad/one_ambiguous_exception.catala_en
   | 
14 |   definition y equals 2
   |              ^
   + Test
